force-app/main/default/objects/Activity/fields/Are_there_any_specific_payment_options_y__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_specific_payment_options_y__c</fullName>
    <label>Are there any specific payment options y</label>
    <length>100</length>
    <type>Text</type>
</CustomField>