force-app/main/default/objects/Activity/fields/Are_there_any_technical_issues_preventin__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_technical_issues_preventin__c</fullName>
    <label>Are there any technical issues preventin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>