force-app/main/default/objects/Activity/fields/Are_you_willing_to_commit_to_a_promise_t__c.field-meta.xml
<CustomField>
    <fullName>Are_you_willing_to_commit_to_a_promise_t__c</fullName>
    <label>Are you willing to commit to a promise t</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>