force-app/main/default/objects/Activity/fields/Call_Center_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Disposition__c</fullName>
    <label>Call Center Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer disputes that payment has already been made or there is no OD</fullName>
            </value>
            <value>
                <fullName>Customer promises to pay</fullName>
            </value>
            <value>
                <fullName>Customer asks to call back</fullName>
            </value>
            <value>
                <fullName>Customer asks to arrange for a pick up</fullName>
            </value>
            <value>
                <fullName>Customer asks to reach out for a third party to follow up for the payment</fullName>
            </value>
            <value>
                <fullName>Customer refuses to pay</fullName>
            </value>
            <value>
                <fullName>Customer reports a theft</fullName>
            </value>
            <value>
                <fullName>Customer reports an accident</fullName>
            </value>
            <value>
                <fullName>Someone informs that the customer has expired</fullName>
            </value>
            <value>
                <fullName>Reminder Given</fullName>
            </value>
            <value>
                <fullName>Could not connect with the customer</fullName>
            </value>
            <value>
                <fullName>Customer completed online payment</fullName>
            </value>
            <value>
                <fullName>Customer pays online payment</fullName>
            </value>
            <value>
                <fullName>Customer claims to have made payment</fullName>
            </value>
            <value>
                <fullName>Customer claims to have made RTGS payment</fullName>
                <isActive>false</isActive>
                <label>Customer claims to have made RTGS payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>