force-app/main/default/objects/Activity/fields/Collected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collected_Amount__c</fullName>
    <label>Collected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>