force-app/main/default/objects/Activity/fields/FOS_Disposition__c.field-meta.xml
<CustomField>
    <fullName>FOS_Disposition__c</fullName>
    <label>FOS Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Payment</fullName>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
            <value>
                <fullName>Customer Not Available</fullName>
            </value>
            <value>
                <fullName>Customer willing to pay on another date</fullName>
            </value>
            <value>
                <fullName>Customer Refused to Pay</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Reschedule on same day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>