force-app/main/default/objects/Activity/fields/In_Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Visit_Date_Time__c</fullName>
    <description>The Visit Date &amp; Time field is used to capture the specific date and time that a field agent visited the debtor&apos;s location.</description>
    <label>In Visit Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>