force-app/main/default/objects/Activity/fields/Next_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit_Date__c</fullName>
    <label>Next Visit Date</label>
    <type>Date</type>
</CustomField>