force-app/main/default/objects/Activity/fields/Other_FOS_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Other_FOS_Disposition__c</fullName>
    <label>Other FOS Disposition</label>
    <type>TextArea</type>
</CustomField>