force-app/main/default/objects/Activity/fields/Out_Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Out_Visit_Date_Time__c</fullName>
    <label>Out Visit Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>