force-app/main/default/objects/Activity/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Multiple Payment Methods</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Credit/Debit card</fullName>
                <isActive>false</isActive>
                <label>Credit/Debit card</label>
            </value>
            <value>
                <fullName>UPI</fullName>
                <isActive>false</isActive>
                <label>UPI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>